<resources>
    <string name="app_name">Pharma E4</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome,</string>
    <string name="have_a_nice_day_at_work">Have a nice day at work</string>
    <string name="home">Home</string>
    <string name="Client">Clients</string>
    <string name="Blog">Blog</string>
    <string name="More">More</string>
    <string name="clinics">Clinics</string>
    <string name="video_call">Video Call</string>
    <string name="schedule">Schedule</string>
    <string name="cancel">Cancel</string>
    <string name="Feedback">Feedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="plan_status">Plan Status</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="your_appointment">Your Appointment</string>
    <string name="view">View</string>
    <string name="Pharmacies">Pharmacies</string>
    <string name="you_have_no_clintes">You have no Clintes</string>
    <string name="Add">Add</string>
    <string name="new_plan">New Plan</string>
    <string name="my_profile">My Profile</string>
    <string name="Reports">Reports</string>
    <string name="schedule_history">Schedule History</string>
    <string name="ChangePassword">Change Password</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="Language">Language</string>
    <string name="LogOut">Log Out</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="survey_form">Survey Form</string>
    <string name="attachment_files">Attachment files</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="save">Save</string>
    <string name="client">Client</string>
    <string name="client_type">Client Type</string>
    <string name="entity_client">Entity Client</string>
    <string name="choose_client">Choose Client</string>
    <string name="client_address_branches_addresses">Client Address (Branches Addresses)</string>
    <string name="OK">Ok</string>
    <string name="required_please_check">Please choose first</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="new_branch">New Branch</string>
    <string name="branche_name">Branche Name</string>
    <string name="street_name">Street name</string>
    <string name="building_number">Building number</string>
    <string name="City">City</string>
    <string name="area">Area</string>
    <string name="floor">Floor</string>
    <string name="landmark">Landmark</string>
    <string name="location_map">Location Map</string>
    <string name="your_location">Your Location</string>
    <string name="branches">Branches</string>
    <string name="reason_plan">Reason Plan</string>
    <string name="feedback_summary">Feedback Summary</string>
    <string name="filter">Filter</string>
    <string name="ClientList">Client List</string>
    <string name="clinic">clinic</string>


</resources>
