<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".View.Fragments.MoreFragment">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_profile2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_b"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/my_profile"
                    android:textColor="#1277d1"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                 android:layout_weight="1" />


                <ImageView
                    android:layout_width="20dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_arrow_right_24dp"
                    android:layout_height="20dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_report" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_b"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/Reports"
                    android:textColor="#1277d1"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <ImageView
                    android:layout_width="20dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_arrow_right_24dp"
                    android:layout_height="20dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardScheduleHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_schedule_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_b"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/schedule_history"
                    android:textColor="#1277d1"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <ImageView
                    android:layout_width="20dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_arrow_right_24dp"
                    android:layout_height="20dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_change_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_b"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/ChangePassword"
                    android:textColor="#1277d1"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <ImageView
                    android:layout_width="20dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_arrow_right_24dp"
                    android:layout_height="20dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHelpSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_help" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_b"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/help_support"
                    android:textColor="#1277d1"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <ImageView
                    android:layout_width="20dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_arrow_right_24dp"
                    android:layout_height="20dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_language" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_b"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/Language"
                    android:textColor="#1277d1"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />



            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui_b"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/LogOut"
                    android:textColor="#1277d1"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</layout>